--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "kill -9 $(lsof -ti:3000,3001) && node website.js"
+    "start": "kill -9 $(lsof -ti:8000,8001) && node website.js",
+    "debug": "node website.js"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
